--- a/gpgpu-cuda/CMakeLists.txt
+++ b/gpgpu-cuda/CMakeLists.txt
@@ -17,7 +17,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall")
 
 add_library(stb_image src/stb_image.h src/stb_image.c)
 add_library(Compute src/Compute.cpp src/Compute.cu src/logo.c)
-target_link_libraries(Compute PRIVATE CUDA::cudart)
+target_link_libraries(Compute PRIVATE CUDA::cudart stb_image)
 
 add_executable(stream src/stream.cpp src/gstfilter.c src/gstfilter.h)
 
