Fix: Before SIMD

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 gpgpu-cuda/build/
-python-backend/_stream_engine.so
-python-backend/__pycache__/
+backend/_stream_engine.so
+backend/__pycache__/
+backend/.venv/
+frontend/node_modules/
